Attaching gear to creatures, first cut
